editing young curry section editing image styling

--- a/main.html
+++ b/main.html
@@ -55,7 +55,7 @@
         </li>
         <li class="large-Screen1">
           <button>
-            <a href"#resources">
+            <a href="#resources">
               Resources
             </a>
           </button>
@@ -64,7 +64,7 @@
     </nav>    
     <main id="main">
       <div id="back-to-top" class="large-img-container">  
-        <img class="large-img" src="./images/jerseyBack.webp" alt="The back of Stephen Curry's jersey."/>                  
+        <img class="large-img" src="./images/jerseyBack.webp" alt="The back of Stephen Curry's jersey."/> 
         <figcaption class="large-caption">
           Back of Curry's jersey.
         </figcaption>
@@ -72,7 +72,11 @@
       <section>
         <header id="young-curry" class="section-header">
           <h2 class="section-title">Young Curry</h2>
-          <p class="section-intro-mini"><span class="large-Screen">The Life of an <dfn><abbr title="National Basketball Association">NBA</abbr></dfn> Player's Son</span></p>
+          <p class="section-intro-mini">
+            <span class="large-Screen">
+              The Life of an <dfn><abbr title="National Basketball Association">NBA</abbr></dfn> Player's Son
+            </span>
+          </p>
         </header>
         <div class="section-line"></div>
         <p id="tribute-info" class="article-info">
@@ -80,9 +84,9 @@
             <img id="image" class="tall-image" src="./images/plushBasketball..jpeg" alt="Young Stephen Curry sitting with a plush basketball.">
             <figcaption class="img-caption" id="img-caption">
               A very young Stephen Curry sitting with a plush basketball
-            </figcaption>                   
+            </figcaption>
           </div>
-          Wardell "Stephen" Curry &#8545;<span class="sr-only">the second</span> or Steph Curry, as we know him, is an active <dfn><abbr title="National Basketball Association">NBA</abbr></dfn> Player. He was born in Akron, Ohio, the eldest son of Wardell "Dell" Curry Sr., a former <abbr title="National Basketball Association">NBA</abbr> player, and Sonya Curry, in 1983. He grew up with two younger siblings, Seth and Sydel Curry. Steph and his siblings grew up in <abbr title="National Basketball Association">NBA</abbr> Arenas. With a <abbr title="three point">3PT</abbr> shooting star for a father, the Curry kids had access to behind the scene activities some can only dream of. It has been said that Steph even attended practices with his father. Dell Curry played for three different teams during his tenure in the <abbr title="National Basketball Association">NBA</abbr>. Throughout his childhood, it was common to see Steph and his siblings trying to participate in pre-game warm-ups or running through the filling arena stands.<span class="mobile-screen">Dell spoken openly with <abbr title="United States of America Basketball">USAB</abbr> during an interview about his son. You can a link to the article in the Resources section. </span><span class="large-Screen1"> In 2019 during an interview with <dfn><abbr title="United States of America Basketball">USAB</abbr></dfn> when asked about a young Steph Curry. Dell Curry gave the following statement:
+          Wardell "Stephen" Curry &#8545;<span class="sr-only">the second</span> or Steph Curry, as we know him, is an active <dfn><abbr title="National Basketball Association">NBA</abbr></dfn> Player. He was born in 1983 in Akron, Ohio, the same town as NBA Superstar, LeBron James. Steph is eldest son of Wardell "Dell" Curry Sr., a former <abbr title="National Basketball Association">NBA</abbr> player, and his wife, Sonya Curry. He grew up with two younger siblings, Seth and Sydel Curry. Steph and his siblings grew up in <abbr title="National Basketball Association">NBA</abbr> Arenas. Dell Curry played for three different teams during his tenure in the <abbr title="National Basketball Association">NBA</abbr>. The Curry kids lived every young basketball players' dream childhood. Stephen and Seth have reminisced in interviews of what life was like for them growing up with a pro dad. They had access to behind the scenes' activities some can only image. They were allowed to attend some practices and participate in special NBA events. Sonya Steph and his siblings trying to participate in pre-game warm-ups or running through the filling arena stands.<span class="mobile-screen">Dell spoken openly with <abbr title="United States of America Basketball">USAB</abbr> during an interview about his son. You can a link to the article in the Resources section. </span><span class="large-Screen1"> In 2019 during an interview with <dfn><abbr title="United States of America Basketball">USAB</abbr></dfn> when asked about a young Steph Curry. Dell Curry gave the following statement:
             <blockquote cite="https://www.usab.com/news-events/news/2015/05/before-they-made-it-stephen-curry.aspx">
               "He was energetic, always paid attention to what was going on, eager to learn. He tried several different sports, not just basketball. He played football, baseball, a little soccer. He was always very intuitive of what was going on around him. He just soaked it all up." 
               <cite>- Dell Curry</cite>
@@ -101,11 +105,11 @@
       <section class="section-clear section-header">
         <header id="wildcats">
           <h2 class="section-title">Wildcat Years</h2>
-          <p class="section-intro-mini"><span class="large-Screen">Putting the nation on notice</span></p>
+          <p class="section-intro-mini"><span class="large-Screen">A Cinderella story in the making</span></p>
         </header>
         <div class="section-line"></div>
         <p class="article-info">
-           Stephen Curty agreed to join the Davidson College Wildcat basketball team. Where he began to blossom and show his true potential. Curry set the record for most points(730)scored in a season by a freshmen at Davidson. Named <dif><abbr title="Southern Conference">SoCon</abbr></dif> Player of the Month several times for his ability on the court. He is also named to the <abbr title="second">2nd</abbr> All American team and nominated for the ESPY's breakout athlete award. Steph would help his team earn bids to the <abbr title="National Collegiate Athletic Association">NCAA</abbr> College Basketball Tournament. During the 2006-2007 Tournament the team lost to Maryland in the first round Curry was able to drop 30 points. Safe to say Curry was set on making every school that looked past him regret it.
+           Stephen Curry agreed to join the Davidson College Wildcat basketball team. Where he began to blossom and show his true potential. Curry set the record for most points(730)scored in a season by a freshmen at Davidson. Named <dif><abbr title="Southern Conference">SoCon</abbr></dif> Player of the Month several times for his ability on the court. He is also named to the <abbr title="second">2nd</abbr> All American team and nominated for the ESPY's breakout athlete award. Steph would help his team earn bids to the <abbr title="National Collegiate Athletic Association">NCAA</abbr> College Basketball Tournament. During the 2006-2007 Tournament the team lost to Maryland in the first round Curry was able to drop 30 points. Safe to say Curry was set on making every school that looked past him regret it.
             <div class="left-float image-style">
               <img class="medium-img" src="./images/davidsonCoach.jpeg">
               <figcaption class="img-caption">Stephen Curry with then Davidson College Coach</figcaption>
@@ -148,8 +152,8 @@
         </figcaption>
       </div>
     </main>
-    <footer class="section-clear">
-      <h2 id="resources" class="section-title">Resources</h2>
+    <footer id="resources" class="section-clear">
+      <h2 class="section-title">Resources</h2>
       <p class="section-into-mini">Links to all pictures, quotes, and additional information can be found in the table below.</p>
       <table>
 
