more editing and fixing mobile and table styling

--- a/main.html
+++ b/main.html
@@ -14,21 +14,23 @@
   <body>
     <header class="header">
       <h1 id="title">Stephen Curry</h1>
-      <p class= "header-intro"><dfn><abbr title="National Basketball Association">NBA</abbr></dfn> Star</p>
+      <p class= "header-intro"><dfn><abbr title="National Basketball Association">nba</abbr></dfn> Star</p>
     </header>
-    <nav class="nav-bar">
+    <nav class="nav-bar laptop-tablet-screen">
       <ul>
-        <li class="large-Screen1">
+        <li>
           <button>
             <a href="#back-to-top">
-              Back To Top
+              <span class="laptop-screen">Back To Top</span>
+              <span class="tablet-screen">Top</span>
             </a>
           </button>
         </li>
         <li>
           <button>
             <a href="#young-curry">
-              Young Curry              
+              <span class="laptop-screen">Young Curry</span>
+              <span class="tablet-screen">Youth</span>
             </a>
           </button>
         </li>
@@ -53,7 +55,7 @@
             </a>
           </button>
         </li>
-        <li class="large-Screen1">
+        <li>
           <button>
             <a href="#resources">
               Resources
@@ -72,10 +74,8 @@
       <section>
         <header id="young-curry" class="section-header">
           <h2 class="section-title">Young Curry</h2>
-          <p class="section-intro-mini">
-            <span class="large-Screen">
-              The Life of an <dfn><abbr title="National Basketball Association">NBA</abbr></dfn> Player's Son
-            </span>
+          <p class="section-intro-mini laptop-screen">
+            The Life of an <abbr>nba</abbr> Player's Son
           </p>
         </header>
         <div class="section-line"></div>
@@ -86,52 +86,53 @@
               A very young Stephen Curry sitting with a plush basketball
             </figcaption>
           </div>
-          Wardell "Stephen" Curry &#8545;<span class="sr-only">the second</span> or Steph Curry, as we know him, is an active <dfn><abbr title="National Basketball Association">NBA</abbr></dfn> Player. He was born in 1983 in Akron, Ohio, the same town as NBA Superstar, LeBron James. Steph is eldest son of Wardell "Dell" Curry Sr., a former <abbr title="National Basketball Association">NBA</abbr> player, and his wife, Sonya Curry. He grew up with two younger siblings, Seth and Sydel Curry. Steph and his siblings grew up in <abbr title="National Basketball Association">NBA</abbr> Arenas. Dell Curry played for three different teams during his tenure in the <abbr title="National Basketball Association">NBA</abbr>. The Curry kids lived every young basketball players' dream childhood. Stephen and Seth have reminisced in interviews of what life was like for them growing up with a pro dad. They had access to behind the scenes' activities some can only image. They were allowed to attend some practices and participate in special NBA events. Sonya Curry has jokingly recalled dragging Steph and his siblings off the court during pre-game warm-ups or watched as they ran through the filling arena stands.<span class="mobile-screen">Dell also spoke openly with <abbr title="United States of America Basketball">USAB</abbr> during an interview about STephen as a kid and more. You can find link to the article in the Resources section. </span><span class="large-Screen1"> In 2019 during an interview with <dfn><abbr title="United States of America Basketball">USAB</abbr></dfn> when asked about a young Steph Curry. Dell Curry gave the following statement:
+          Wardell "Stephen" Curry &#8545;<span class="sr-only">the second</span> or Steph Curry, as we know him, is an active <abbr>nba</abbr> Player. He was born in 1983 in Akron, Ohio, the same town as NBA Superstar, LeBron James. Steph is eldest son of Wardell "Dell" Curry Sr., a former <abbr>nba</abbr> player, and his wife, Sonya Curry. He grew up with two younger siblings, Seth and Sydel Curry. Steph and his siblings grew up in <abbr>nba</abbr> Arenas. Dell Curry played for three different teams during his tenure in the <abbr>nba</abbr>. The Curry kids lived every young basketball players' dream childhood. Stephen and Seth have reminisced in interviews of what life was like for them growing up with a pro dad. They had access to behind the scenes' activities some can only image. They were allowed to attend some practices and participate in special NBA events. Sonya Curry has jokingly recalled dragging Steph and his siblings off the court during pre-game warm-ups or watched as they ran through the filling arena stands.<span class="mobile-screen">Dell also spoke openly with <abbr title="United States of America Basketball">usab</abbr> during an interview about STephen as a kid and more. You can find link to the article in the Resources section. </span>
+          <span class="laptop-tablet-screen"> In 2019 during an interview with <abbr>usab</abbr> when asked about a young Steph Curry. Dell Curry gave the following statement:
             <blockquote cite="https://www.usab.com/news-events/news/2015/05/before-they-made-it-stephen-curry.aspx">
               "He was energetic, always paid attention to what was going on, eager to learn. He tried several different sports, not just basketball. He played football, baseball, a little soccer. He was always very intuitive of what was going on around him. He just soaked it all up." 
               <cite>- Dell Curry</cite>
             </blockquote>
-            </span>
-          Dell and other members of the Curry family aren't the only one who have spoken fondly of a young Steph. There are many articles and videoes of past basketball stars retelling tells of meeting and knowing Stephen Curry as a kid. Several even elaborated on seeing Curry's future potential in the sport. It's safe to say that getting to spend his childhood around legends of the game has greatly influenced Steph's love for basketball.
-          <div class="float-left large-Screen">
-            <img class="medium-size-image" src="./images/youngStephen.jpg" alt="Stephen Curry as a child watching his dad's 3PT shooting contest.">
+          </span>
+          Dell and other members of the Curry family aren't the only ones who have spoken fondly of a young Steph. There are many articles and videoes of past basketball stars retelling tells of meeting and knowing Stephen Curry as a kid. Several even elaborated on seeing Curry's future potential in the sport. It's safe to say that getting to spend his childhood around legends of the game has greatly influenced Steph's love for basketball. Through the support, love, and encouragement of his family Steph was able to gain the skills needed to earn a spot on his high school team. He played basketball at Charlotte Christian in North Carolina. 
+          <div class="float-left laptop-tablet-screen">
+            <img class="tall-image" src="./images/youngStephen.jpg" alt="Stephen Curry as a child watching his dad's 3PT shooting contest.">
             <figcaption class="img-caption">
-              A young Stephen Curry at his father's <abbr title="three point">3PT</abbr> shooting contest. Posted on Twitter by <span class="owner">Timeless Sports</span>
+              A young Stephen Curry with his father.
             </figcaption>
-          </div>
-          Through the support, love, and encouragement of his family Steph was able to gain the skills needed to earn a spot on his high school team. He played basketball at Charlotte Christian in North Carolina. While in high school he was named to the All State Team, All Conference Team, and won his Team's <abbr title="Most Valuable Player">MVP</abbr> award. He helped lead his team to three conference titles and three state playoff appearences. He ended his high school career ranked <abbr title="Number">No.</abbr> 16 in his state and <abbr title="Number">No.</abbr> 60 of all point guards National Wide. Yet suprisingly Curry was not a highly sought after recruit. Towards the end of his high school career Stephen was only rated as an 3 star recruit. The highest rating a high school player can get is 5 and the lowest is 2. So being rated so low amgonst other players across the country did not land him any scholarship offers. Curry had his eyes set on Virginia Tech to follow in his father's footsteps but after a try-out with the team he was only offered a walk-on role. However Steph knew he needed to go to a school where he would be guaranteed playing time if he wanted to make his dreams of going pro come true. It is no secret many colleges over looked Curry because of his physical appearance. At the end of his high school career, Stephen Curry stood at only 6'0 feet tall and weighed under 200 <abbr title="pounds">lbs</abbr> which many deemed unsuitable for the cutthroat and physically demanding nature of college basketball. Which left his choices of colleges very slim. In the end he chose to go to a local college.
+          </div>          
+          While in high school he was named to the All State Team, All Conference Team, and won his Team's <abbr title="Most Valuable Player">MVP</abbr> award. He helped lead his team to three conference titles and three state playoff appearences. He ended his high school career ranked <abbr title="Number">No.</abbr> 16 in his state and <abbr title="Number">No.</abbr> 60 of all point guards National Wide. Yet suprisingly Curry was not a highly sought after recruit. Towards the end of his high school career Stephen was only rated as an 3 star recruit. The highest rating a high school player can get is 5 and the lowest is 2. So being rated so low amgonst other players across the country did not land him any scholarship offers. Curry had his eyes set on Virginia Tech to follow in his father's footsteps but after a try-out with the team he was only offered a walk-on role. However Steph knew he needed to go to a school where he would be guaranteed playing time if he wanted to make his dreams of going pro come true. It is no secret many colleges over looked Curry because of his physical appearance. At the end of his high school career, Stephen Curry stood at only 6'0 feet tall and weighed under 200 <abbr title="pounds">lbs</abbr> which many deemed unsuitable for the cutthroat and physically demanding nature of college basketball. Which left his choices of colleges very slim. In the end he chose to go to a local college.
         </p>
       </section>
       <section class="section-clear section-header">
         <header id="wildcats">
           <h2 class="section-title">Wildcat Years</h2>
-          <p class="section-intro-mini"><span class="large-Screen">A Cinderella story in the making</span></p>
+          <p class="section-intro-mini laptop-tablet-screen">A Cinderella story in the making</p>
         </header>
         <div class="section-line"></div>
         <p class="article-info">
-           Stephen Curry agreed to join the Davidson College Wildcat basketball team. Where he began to blossom and show his true potential. Curry set the record for most points(730)scored in a season by a freshmen at Davidson. Named <dif><abbr title="Southern Conference">SoCon</abbr></dif> Player of the Month several times for his ability on the court. He is also named to the <abbr title="second">2nd</abbr> All American team and nominated for the ESPY's breakout athlete award. Steph would help his team earn bids to the <abbr title="National Collegiate Athletic Association">NCAA</abbr> College Basketball Tournament. During the 2006-2007 Tournament the team lost to Maryland in the first round Curry was able to drop 30 points. Safe to say Curry was set on making every school that looked past him regret it.
-            <div class="left-float image-style">
-              <img class="medium-img" src="./images/davidsonCoach.jpeg">
-              <figcaption class="img-caption">Stephen Curry with then Davidson College Coach</figcaption>
-            </div>
-           In the 2007-2008 season Curry once again helped his team make it to the NCAA College Basketball tournament. Davidson went into the first round ranked 10th. This tourney run would turn out to be a cinderalla story for the ages. Curry and the Wildcat team pulled off three major upsets that stunned the nation. blazed through the first three rounds with consecutive upsets against higher ranked opponents, <dfn><abbr title="number">No.</abbr></dfn>7 Gonzaga, <dfn><abbr title="number">No.</abbr></dfn>2 Georgetown, and <dfn><abbr title="number">No.</abbr></dfn>3 Wisconsin. Only being kept out of the Final Four round by a 2 point loss to Kansas. This was the moment Curry but the entire nation on notice. Averaging over 25 points per game and leading his team on what many deemed a cinderalla run through the bracket. A few talk shows invited to talk on their show to discussion the miracle season.
-           <blockquote></blockquote>
+           Stephen Curry agreed to join the Davidson College Wildcat basketball team. Where he began to blossom and show his true potential. He broke a few collegieta and school records such as: the <div><abbr title="National Collegiate Athletic Association">NCAA</abbr></div> record for most 3 record for most points(730)scored in a season by a freshmen at Davidson and . Named <dfn><abbr title="Southern Conference">SoCon</abbr></dfn> Player of the Month several times for his ability on the court. He wass also named to numerous <abbr title="second">2nd</abbr> All American team and nominated for the ESPY's breakout athlete award.
+           Steph would help his team earn bids to the <abbr>NCAA</abbr> College Basketball Tournament. During the 2006-2007 Tournament the team lost to Maryland in the first round Curry was able to drop 30 points. Safe to say Curry was set on making every school that looked past him regret it. In the 2007-2008 season Curry once again helped his team make it to the NCAA College Basketball tournament. Davidson went into the first round ranked 10th. This tourney run would turn out to be a cinderalla story for the ages. Curry and the Wildcat team pulled off three major upsets that stunned the nation. blazed through the first three rounds with consecutive upsets against higher ranked opponents, <dfn><abbr title="number">No.</abbr></dfn>7 Gonzaga, <dfn><abbr title="number">No.</abbr></dfn>2 Georgetown, and <dfn><abbr title="number">No.</abbr></dfn>3 Wisconsin. Only being kept out of the Final Four round by a 2 point loss to Kansas. This was the moment Curry but the entire nation on notice. Averaging over 25 points per game and leading his team on what many deemed a cinderalla run through the bracket. A few talk shows invited to talk on their show to discussion the miracle season.
+          <div class="float-left">
+            <img class="medium-size-image" src="./images/davidsonCoach.jpeg">
+            <figcaption class="img-caption">Stephen Curry with then Davidson College Coach</figcaption>
+          </div>
+          <blockquote></blockquote>
         </p>
       </section>
       <div class="section-clear section-header">
         <header id="dynasty">
           <h2 class="section-title">Warrior's Dynasty</h2>
-          <p class="section-intro-mini">4 NBA Championship Titles and 2 <abbr title="Most Valuable Player">MVP</abbr>Awards</p>
+          <p class="section-intro-mini laptop-tablet-screen">4 NBA Championship Titles and 2 <abbr title="Most Valuable Player">MVP</abbr>Awards</p>
         </header>
         <div class="section-line"></div>
         <p class="article-info">          
-          Stephen Curry went into draft night unlike many other draftees. There had been hints of where he would end up. The New York Knicks, an <abbr title="National Basketball Association">NBA</abbr> based in New York City, New York, made it known they were hoping to draft Curry as their pick in the <abbr title="eighth">8th</abbr> slot. But to the surprise of Steph, his family and the world he was choosen as the <dfn><abbr title="seventh">7th</abbr></dfn> pick of the 2009 draft. The San Francisco Golden State Warriors saw something in Curry and wanted him to be a part of their camp.
-          <div>
+          Stephen Curry went into draft night unlike many other draftees. There had been hints of where he would end up. The New York Knicks, an <abbr">NBA</abbr> based in New York City, New York, made it known they were hoping to draft Curry as their pick in the <abbr title="eighth">8th</abbr> slot. But to the surprise of Steph, his family, and the world he was choosen as the <dfn><abbr title="seventh">7th</abbr></dfn> pick of the 2009 draft. The San Francisco Golden State Warriors saw something in Curry and wanted him to be a part of their camp.
+          <div class="float-right">
             <img src="./images/drafted.jpg" class="medium-img" alt="A newly drafted Stephen Curry holding a Warrior's jersey" />
               <figcaption>Curry standing with his new Warrior's jersey after being drafted.</figcaption>
           </div>
           Curry had a spectacular rookie season in the NBA. It almost seamless fit into the Warriors' lineup. He would start in 71 total games and play in 77. His averages were . The rookie sensation would only just miss winning the Rookie of the Year award finsishing in second place. It seemed as though Curry was the fresh new blood that the Warriors needed to break the curse on the Bay area. But then 
-          <div class="video-frame">
+          <div class="">
             
           </div> 
         </p>
