adding mobile navbar

--- a/main.html
+++ b/main.html
@@ -63,7 +63,10 @@
           </button>
         </li>
       </ul>
-    </nav>    
+    </nav>
+    <nav class="mobile-screen">
+      <dropdown></dropdown>
+    </nav>
     <main id="main">
       <div id="back-to-top" class="large-img-container">  
         <img class="large-img" src="./images/jerseyBack.webp" alt="The back of Stephen Curry's jersey."/> 
