--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
     
     <link rel="stylesheet" media="all" href="./styles/styles.css">
     <link rel="stylesheet" media="screen and (max-width: 786px)" href="./styles/tabletStyles.css">
-    <link rel="stylesheet" media="screen and (max-width: 440px" href="./styles/mobileStyle.css">
+    <link rel="stylesheet" media="screen and (max-width: 440px)" href="./styles/mobileStyle.css">
   </head>
   <body>
     <header class="header">
