adding mobile and tablet styles for cover page and adding image

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Mock Tribute Page</title>
     
     <link rel="stylesheet" href="./styles/coverStyle.css">
+    <link rel="stylesheet" media="screen and (max-width: 786)" href="./styles/coverTablet.css">
+    <link rel="stylesheet" media="screen and (max-width: 440px)" href="./styles/covermobile.css">
   </head>
   <body>   
     <a href="./main.html" id="background-img">Click</a>
