editing young years and college years

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <a href="./main.html" id="background-img">Click</a>
     <header>
       <h1 id="title">
-        <span class="web-screen">Wardell "Stephen" Curry<span class="sr-only">The Second</span> &#8545;</span>
-        <span class="mobile-screen">Stephen<br/> Curry</span>
+        <span class="web-screen">Wardell "Steph" Curry<span class="sr-only">The Second</span> &#8545;</span>
+        <span class="mobile-screen">Steph<br/> Curry</span>
       </h1>
       <p class="headerIntro">
         <span class="web-screen">An <abbr title="National Basketball Association">NBA</abbr> Star and Legend, who changed the way basketball is played today.</span>.
