fixing minor bugs

--- a/index.html
+++ b/index.html
@@ -7,19 +7,18 @@
     <title>Mock Tribute Page</title>
     
     <link rel="stylesheet" href="./styles/coverStyle.css">
-    <link rel="stylesheet" media="screen and (max-width: 786)" href="./styles/coverTablet.css">
-    <link rel="stylesheet" media="screen and (max-width: 440px)" href="./styles/covermobile.css">
+    <link rel="stylesheet" media="screen and (max-width: 7708px)" href="./styles/coverTablet.css">
+    <link rel="stylesheet" media="screen and (max-width: 442px)" href="./styles/covermobile.css">
   </head>
   <body>   
     <a href="./main.html" id="background-img">Click</a>
     <header>
       <h1 id="title">
         <span class="web-screen">Wardell "Steph" Curry<span class="sr-only">The Second</span> &#8545;</span>
-        <span class="mobile-screen">Steph<br/> Curry</span>
+        <span class="mobile-screen">Steph Curry</span>
       </h1>
-      <p class="headerIntro">
-        <span class="web-screen">An <abbr title="National Basketball Association">NBA</abbr> Star and Legend, who changed the way basketball is played today.</span>.
-        <span class="mobile-screen"><abbr title="National Basketball Association">NBA</abbr> Star and Legend</span>
+      <p class="headerIntro web-screen">
+       An <abbr title="National Basketball Association">NBA</abbr> Star and Legend, who changed the way basketball is played today.
       </p>
     </header>
   </body>
