--- a/main.html
+++ b/main.html
@@ -122,7 +122,7 @@
           </div>
           Coach Bob McKillop took notice of Curry during his high school career. He saw something in the young player that others did not. Curry had true potential and a high basketball IQ. So in fall of 2006 Curry was enrolled at Davidson College where he would further his education and basketball career. Some would say Steph's game blossomed under the guidance of Coach Bob McKillop. It did not take long for others to his true potential in the game as well. <span class="mobile-screen">The <dfn><abbr title="National Collegiate Athletic Association">NCAA</abbr></dfn> wrote an exceptional piece on Steph's time at Davidson which will be in the resources menu below.</span>
           <span class="laptop-tablet-screen">
-            <blockquote cite="https://www.ncaa.com/news/basketball-men/article/2021-08-30/steph-curry-college-basketball-stats-best-moments-quotes#:~:text=First%20all%2Dtime%20in%203,sophomore%3A%204.50%20threes%20per%20game">
+            <blockquote class="cited-quote" cite="https://www.ncaa.com/news/basketball-men/article/2021-08-30/steph-curry-college-basketball-stats-best-moments-quotes#:~:text=First%20all%2Dtime%20in%203,sophomore%3A%204.50%20threes%20per%20game">
               "Nine games into his college career, Stephen Curry has made an impact," wrote The Charlotte Observer's Ron Green Jr. "On a young team that has re-energized Bob McKillop, Curry has emerged not only as the team's primary scoring threat, but as an effective — and potentially outstanding — defender." McKillop agreed with that assessment, noting, "Eventually he'll become one of the great defenders we've had here because he has a great basketball IQ. 
               <cite>- NCAA Article</cite>
             </blockquote>
